3824.	[bug]		A collision between two flag values could cause
			problems with cache cleaning when SIT was enabled.
			[RT #35858]

3822.	[bug]		Log the correct type of static-stub zones when
			removing them. [RT #35842]

3819.	[bug]		NSEC3 hashes need to be able to be entered and
			displayed without padding.  This is not a issue for
			currently defined algorithms but may be for future
			hash algorithms. [RT #27925]

3818.	[bug]		Stop lying to the optimizer that 'void *arg' is a
			constant in isc_event_allocate.

3815.	[doc]		Clarify "nsupdate -y" usage in man page. [RT #35808]

3809.	[doc]		Fix NSID documentation.

3807.	[bug]		Fix sign extention bug in dns_name_fromtext when
			lowercase is set. [RT #35743]

3806.	[test]		Improved system test portability. [RT #35625]

3805.	[contrib]	Added contrib/perftcpdns, a performance testing tool
			for DNS over TCP. [RT #35710]

3804.	[bug]		Corrected a race condition in dispatch.c in which
			portentry could be reset leading to an assertion
			failure in socket_search(). (Change #3708
			addressed the same issue but was incomplete.)
			[RT #35128]

3803.	[bug]		"named-checkconf -z" incorrectly rejected zones
			using alternate data sources for not having a "file"
			option. [RT #35685]

3802.	[bug]		Various header files were not being installed.

3801.	[port]		Fix probing for gssapi support on FreeBSD. [RT #35615]

3799.	[bug]		Improve named's command line error reporting.
			[RT #35603]

3796.	[bug]		Register dns error codes. [RT #35629]

3795.	[bug]		Make named-checkconf detect raw masterfiles for
			hint zones and reject them. [RT #35268]

3794.	[maint]		Added AAAA for C.ROOT-SERVERS.NET.

3793.	[bug]		zone.c:save_nsec3param() could assert when out of
			memory. [RT #35621]

3792.	[func]		Provide links to the alternate statistics views when
			displaying in a browser.  [RT #35605]

3791.	[bug]		solaris: remove extraneous return. [RT #35589]

3787.	[bug]		The code that checks whether "auto-dnssec" is